PPP-1202 - Fixing the code to get datasource displaying PPP-1196 BISERVER-1918- added capability for starting with https. Also added flexibility for the user to plug in any login module they want
git-svn-id: svn://source.pentaho.org/svnroot/pentaho-open-admin-console/trunk@32452 5d404267-db13-0410-8476-b1f6b398e63a