@@ -14,4 +14,4 @@ if [ $S1=$S2 ]; then
 fi
 
 echo "JAVA is $JAVA"
-$JAVA -DCONSOLE_HOME=. -Dlog4j.configuration=resource/config/log4j.xml -jar lib/pentaho-open-admin-console.jar
+$JAVA -Xmx512M -XX:PermSize=64M -XX:MaxPermSize=128M  -DCONSOLE_HOME=. -Dlog4j.configuration=resource/config/log4j.xml -jar lib/pentaho-open-admin-console.jar
